# fathom

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
.claude/: settings.json
.githooks/: pre-commit
docs/: debt.md  findings.md  recruiter_polish_brief.md  road.md  viewer_dev.md
fixtures/: tec_case.json
handoffs/: 2026-06-16-lesson-unverified-load-bearing-claims.md  2026-06-16-spike-audit-response.md  2026-06-16-spike-completion-audit.md  2026-06-21 fathom eval-fairness-cost-audit.md  2026-06-21-forkgen-unspliced-in-forks.md  2026-06-22 fathom viewer-spike.md  2026-06-22-controller-m1-and-case8-fix.md  fathom_visualizer_alignment_2026-06-22.md  fathom_visualizer_spec.md  upstream-candidates.md
investigation/: BRIEFING.md  RESULTS.md  cap_case1.json  cap_case1_v3.json  cap_case1_v4.json  cap_case2.json  cap_case2_v3.json  cap_case3.json  cap_case3_v3.json  cap_case4.json  cap_case4_v3.json  cap_case5.json  cap_case5_v2.json  cap_case5_v3.json  cap_case6.json  cap_case6_v3.json  cap_case7.json  cap_case7_v3.json  cap_case7_v4.json  cap_case8.json  cap_case8_v2.json  cap_case8_v3.json  capture.py
monition/: dump.sql
tests/: test_baselines.py  test_beliefs.py  test_benchmark.py  test_capability.py  test_cases.py  test_checks.py  test_controller_tec.py  test_eval.py  test_generator.py  test_llm.py  test_schemas.py  test_scoring_symmetry.py  test_viewer.py
tools/: build_viewer_site.py  craft_reminder.py  gui_smoke.py  lint.py  reexport_viewer_graphs.py  run_eval.py  session_tokens.py
viewer_site/: bundles.js  case1.json  case2.json  case3.json  (+7 more)
(+60 files in other folders)
