[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fathom-dh"
version = "0.0.1"
description = "Fathom diagnostic harness — abductive LLM controller over a generated lidar SUT and a QA benchmark (spike)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",      # data contracts (spec §3)
    "networkx>=3",      # the small typed graph (spec §10)
    "rank-bm25>=0.2",   # search() over artifacts (M2, spec §10)
    "anthropic>=0.40",  # controller LLM calls (M3, spec §10)
    "pyyaml>=6",        # config.yaml loader
]

[project.optional-dependencies]
dev = ["pytest>=8"]
hybrid = ["sentence-transformers>=2"]   # optional hybrid search (spec §10)
benchmark = ["datasets>=2"]             # MuSiQue release (M8, spec §8.2)

[tool.hatch.build.targets.wheel]
packages = ["src/dh"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
